--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
 
     <string name="title_activity_network_test">NetworkTest</string>
+    <string name="title_activity_storage_test">StorageTest</string>
 </resources>
